[JVMCI] incorrect implementation of isCompilable

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P3
    • 9
    • Affects Version/s: 9
    • Component/s: hotspot
    • b159

        JDK-8172733 added isCompilable in jvmciCompilerToVM.cpp but with an incorrect implementation. In particular, the answer should not take UseJVMCICompiler into account at all. JVMCI clients that do not care about VM policies effecting the compilability of a method (e.g. whether it has breakpoints etc) should ignore this API altogether.

              Assignee:
              Douglas Simon
              Reporter:
              Douglas Simon
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

                Created:
                Updated:
                Resolved: