8174961: [JVMCI] incorrect implementation of isCompilable

Reviewed-by: kvn